Changed link to my project

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
     <body>
         <h1>Jodan's Portfolio</h1>
-        <a href="www.google.com">Dangerous Link</a>
+        <a href="https://jodankerk.github.io/First-Project/">My Project</a>
     </body>
 </html>
