Changed link to my project

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <body>
         <h1>Jodan's Portfolio</h1>
+        <h2>My Projects</h2>
         <a href="https://jodankerk.github.io/First-Project/">My Project</a>
     </body>
 </html>
