--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p>This is my favourite song! I love music!</p>
             <p style="font-size:50%">Did you fall for the Rickroll?</p>
             <img class="fit-picture"
-            src = "Fireworks.jpg"
+            src = "Fireworks.JPG"
             alt = "A nice photo I took">
             <p>And I love photography too! Here's a nice picture I took from my phone!</p>
         </div>
